--- a/examples/index.html
+++ b/examples/index.html
@@ -15,7 +15,7 @@
       <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500|Roboto+Mono|Roboto+Condensed:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
       <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
-      <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.green-orange.min.css" />
+      <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.deep_orange-blue.min.css" />
 
       <!-- Katex-->
 
